--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="I'm josh rainer gold and this is my website where i talk about meat, raw milk, and just how dumb i am"
+    />
     <title>Josh Rainer Gold</title>
   </head>
   <body>
