--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
       name="description"
       content="I'm josh rainer gold and this is my website where i talk about meat, raw milk, and just how dumb i am"
     />
-    <title>Josh Rainer Gold</title>
+    <title>Raw Meat Man</title>
   </head>
   <body>
-    <h1>Hi I'm josh and I'm a big stupid dummy</h1>
+    <h1>Raw Milk Man</h1>
+    <p>Hi I'm Josh Rainer Gold and I'm a big stupid dummy</p>
   </body>
 </html>
