--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
   </head>
   <body>
     <h1>Raw Milk Man</h1>
-    <p>Hi I'm Josh Rainer Gold and I'm a big stupid dummy</p>
+    <p>
+      hi I'm Josh Rainer Gold and I'm a big stupid dummy. i love eating raw meat
+      because im a big strong man
+    </p>
   </body>
 </html>
