--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       name="description"
       content="I'm josh rainer gold and this is my website where i talk about meat, raw milk, and just how dumb i am"
     />
-    <title>Raw Meat Man</title>
+    <title>Josh Rainer Gold - the dumbest man</title>
   </head>
   <body>
     <h1>Raw Milk Man</h1>
