--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Josh Rainer Gold - the dumbest man</title>
   </head>
   <body>
-    <h1>Raw Milk Man</h1>
+    <h1>a dumb man who drinks milk like a big baby</h1>
     <p>
       hi I'm Josh Rainer Gold and I'm a big stupid dummy. i love eating raw meat
       because im a big strong man
