--- a/index.html
+++ b/index.html
@@ -6,15 +6,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="I'm josh rainer gold and this is my website where i talk about meat, raw milk, and just how dumb i am"
+      content="I'm josh (joshua) rainer gold and this is my website where i talk about meat, raw milk, and just how dumb i am"
     />
     <title>Josh Rainer Gold - the dumbest man</title>
   </head>
-  <body>
-    <h1>a dumb man who drinks milk like a big baby</h1>
-    <p>
-      hi I'm Josh Rainer Gold and I'm a big stupid dummy. i love eating raw meat
-      because im a big strong man
-    </p>
+  <body style="width: 960px; margin: 0 auto">
+    <div style="width: 100%">
+      <h1>a dumb man who drinks milk like a big baby</h1>
+      <p>
+        hi I'm Josh Rainer Gold and I'm a big stupid dummy. i love eating raw
+        meat because im a big strong man
+      </p>
+
+      <p>
+        I like to cosplay as a farmer, but actually, I'm a little trust fund kid
+        <a
+          href="https://digs.net/a-lifetime-of-achievement-jack-gillespie-arnold-goldstein/"
+          rel="noopener"
+          >(my parents are millionaires)</a
+        >
+      </p>
+      <div
+        style="
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
+          width: 100%;
+        "
+      >
+        <img src="public/images/img1.png" style="max-width: 75%" />
+        <img src="public/images/img2.png" style="max-width: 75%" />
+      </div>
+    </div>
   </body>
 </html>
