--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Josh Rainer Gold - the dumbest man</title>
   </head>
   <body style="width: 960px; margin: 0 auto">
-    <div style="width: 100%">
+    <div style="width: 100%; text-align: center">
       <h1>a dumb man who drinks milk like a big baby</h1>
       <p>
         hi I'm Josh Rainer Gold and I'm a big stupid dummy. i love eating raw
